--- a/frontend/src/components/Profile Page/profile.css
+++ b/frontend/src/components/Profile Page/profile.css
@@ -2,10 +2,11 @@
 .profile-page{  
     height: 100vh;
     width: 100vw;
+    background-color: #083746;
 }
 body{
    
-    background-color: #083746;
+    background-color: rgb(248, 248, 248);
     overflow-x: hidden;
 }
 .profile-section{
