--- a/frontend/src/components/Profile Page/profile.css
+++ b/frontend/src/components/Profile Page/profile.css
@@ -1,104 +1,133 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-.profile-page{  
-    height: 100vh;
-    width: 100vw;
-    background-color: #083746;
-}
-body{
-   
-    background-color: rgb(248, 248, 248);
-    overflow-x: hidden;
-}
-.profile-section{
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: poppins;
-        /* border: 20px solid black; */
+
+.profile-page {
+  /* height: 100vh; */
+  width: 100vw;
+  background-color: #083746;
 }
 
-.profile-section-2{
- max-width: 72rem;
- margin : auto;
- font-family: poppins;
- color: rgba(255, 255, 255, 0.749);
- /* border: 20px solid black;   */
- text-align: center;
+body {
+
+  background-color: rgb(248, 248, 248);
+  overflow-x: hidden;
 }
-.profile-contaniner{
+
+.profile-section {
+  /* height: 100vh; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: poppins;
+  /* border: 20px solid black; */
+}
+
+.profile-section-2 {
+  max-width: 72rem;
+  margin: auto;
+  font-family: poppins;
+  color: rgba(255, 255, 255, 0.749);
+  /* border: 20px solid black;   */
+  text-align: center;
+}
+
+.profile-contaniner {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 1.5rem;
+
+}
+
+.profile-heading {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  font-weight: bolder;
+
+}
+
+.profile-para {
+  font-size: 0.75rem;
+  line-height: 1rem;
+  margin-top: 0.75rem;
+}
+
+.main-container-profile {
+
+  display: flex;
+  margin-top: 2rem;
+  align-items: center;
+  gap: 1rem;
+  padding: 1.25rem;
+  border-radius: 0.5rem;
+  background-color: rgba(160, 185, 239, 0.156);
+  box-shadow: 0 2px 10px -3px rgb(160, 185, 239);
+
+}
+
+@media (min-width: 1024px) {
+
+  .main-container-profile {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.first-container {
+  background-color: #1C5D73;
+  border-radius: 0.5rem;
+  padding: 1.5rem;
+
+}
+
+@media (max-width: 1024px) {
+  .first-container {
+    text-align: center;
+  }
+
+  /* .main-container-profile {
+    display: grid;
+  } */
+}
+
+@media (min-width: 600px) {
+  .profile-section {
+    height: 100vh;
+  }
+}
+
+@media (max-width: 600px) {
+  .main-container-profile {
     display: flex;
     flex-direction: column;
-    text-align: center;
-    padding: 1.5rem;
-    
-}
-.profile-heading{
-    font-size: 1.875rem;
-line-height: 2.25rem;
-font-weight: bolder;
-
-}
-.profile-para{
-    font-size: 0.75rem;
-line-height: 1rem;
-margin-top: 0.75rem; 
-}
-.main-container{
-
-    display: flex;
-    margin-top: 2rem;
-    align-items: center;
-    gap:  1rem;
-    padding: 1.25rem;
-    border-radius: 0.5rem;
-    background-color: rgba(160, 185, 239, 0.156);
-    box-shadow:0 2px 10px -3px rgb(160, 185, 239) ;
-    
-}
-@media (min-width: 1024px) {
-    .main-container {
-      
-      grid-template-columns: repeat(3, 1fr);
-    }
+    margin: 20px;
   }
-.first-container{
-    background-color: #1C5D73 ;
-    border-radius: 0.5rem;
-    padding: 1.5rem;
-   
 }
 
-  @media (max-width: 1024px) {
-    .first-container {
-      text-align: center;
-    }
-    .main-container{
-      display: grid;
-    }
-  }
-.contact-heading{
-    font-size: 1.5rem;
+.contact-heading {
+  font-size: 1.5rem;
   font-weight: 500;
   color: #ffffff;
 }
+
 .contact-para {
-    font-size: 1rem;
-    color: #a3a3a3;
-    margin-top: 0.75rem;
+  font-size: 1rem;
+  color: #a3a3a3;
+  margin-top: 0.75rem;
 }
+
 .contact-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
- }
-.profile-img{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.profile-img {
   width: 200px;
   height: auto;
   background-size: cover;
   border-radius: 100px;
 }
-.second-container{
+
+.second-container {
   width: 100%;
   height: 100%;
   /* border: 2px solid; */
@@ -106,16 +135,20 @@ margin-top: 0.75rem;
   /* background-color: white; */
   color: rgb(243, 239, 239);
 }
-span{
+
+span {
   font-weight: 700;
 }
-.main-info{
+
+.main-info {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  align-items:center;
+  align-items: center;
 }
-.edit-btn, .save-btn,
+
+.edit-btn,
+.save-btn,
 .profile-logout {
   cursor: pointer;
   padding: 10px;
@@ -123,14 +156,19 @@ span{
   color: black;
   font-weight: 500;
   border-radius: 1.5rem;
-  border: none; /* Remove default border */
-  transition: background-color 0.3s, color 0.3s; /* Smooth hover effect */
+  border: none;
+  /* Remove default border */
+  transition: background-color 0.3s, color 0.3s;
+  /* Smooth hover effect */
 }
 
 
 .prof-button-container {
   display: flex;
-  gap: 1rem; /* Space between buttons */
-  justify-content: center; /* Center buttons horizontally */
-  margin-top: 1rem; /* Space above buttons */
+  gap: 1rem;
+  /* Space between buttons */
+  justify-content: center;
+  /* Center buttons horizontally */
+  margin-top: 1rem;
+  /* Space above buttons */
 }
