--- a/frontend/src/components/Register-page/Register.css
+++ b/frontend/src/components/Register-page/Register.css
@@ -62,7 +62,7 @@
   margin-bottom: 20px;
   text-align: center; /* Center align the heading */
   position: relative;
-right: 180px;
+  right: 180px;
 }
 
 .form-group {
@@ -115,7 +115,7 @@ right: 180px;
 }
 
 .form-group label input[type="checkbox"]::after {
-  content: '\2713'; /* Unicode character for checkmark */
+  content: "\2713"; /* Unicode character for checkmark */
   font-size: 16px; /* Adjust size of the checkmark */
   color: #fff; /* White color for the checkmark */
   position: absolute;
