--- a/frontend/src/components/FolderDash/dash.css
+++ b/frontend/src/components/FolderDash/dash.css
@@ -3,13 +3,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
   padding: 20px;
 }
 
 .dash {
-  width: 350px; /* Increased width */
-  height: 300px; /* Increased height */
+  width: 350px; 
+  min-height: 300px; 
   margin: 20px;
   padding: 20px;
   background-color: #254441; /* Green background color */
@@ -44,4 +44,17 @@
   font-size: 1.2rem; /* Slightly larger font size for description */
   color: #ffffff;
   line-height: 1.5;
+}
+
+@media (max-width: 768px) {
+  .dash-container {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (min-width: 768px) {
+  .dash-container {
+    height: 100vh;
+  }
 }
