--- a/frontend/src/components/Doctor/Doctor.css
+++ b/frontend/src/components/Doctor/Doctor.css
@@ -1,6 +1,9 @@
 .main-container {
     display: flex;
     flex-direction: column;
+    padding: 30px;
+    align-items: center;
+    gap: 30px;
 }
 
 .main-head {
