--- a/frontend/src/components/Register-page/Register.css
+++ b/frontend/src/components/Register-page/Register.css
@@ -79,6 +79,7 @@
   padding: 5px;
   margin: 20px 0;
   display: flex;
+  gap: 20%;
 }
 
 .form-group2 label {
@@ -139,4 +140,23 @@
   cursor: pointer;
   transition: background-color 0.3s;
   margin-top: 10px; /* Add margin top for spacing */
+}
+
+.disabled {
+  background-color: gray;
+  cursor: not-allowed;
+}
+
+@media (max-width:768px) {
+  .register-content {
+      display: none;
+  }
+
+  .hospital-register-container {
+    padding: 50px;
+  }
+
+  .register-form-container {
+    padding: 0px;
+  }
 }
