--- a/frontend/src/components/ViewRecord/ViewRecord.css
+++ b/frontend/src/components/ViewRecord/ViewRecord.css
@@ -1,3 +1,12 @@
+.viewrecordhead {
+    text-align: center;
+}
+
+.mainviewrecpage {
+    padding: 20px;
+    margin-bottom: 30px;
+}
+
 .record-container {
     display: flex;
     width: 100%;
