--- a/frontend/src/components/ViewRecord/ViewRecord.css
+++ b/frontend/src/components/ViewRecord/ViewRecord.css
@@ -14,24 +14,17 @@
     background-color: #f8f8f8;
 }
 
-
-.cont {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
+.card-container {
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
 }
 
-.cont h2 {
-    font-size: 36px;
-}
-
-.record-card-container {
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    width: 90%;
-    display: flex;
-    gap: 40px;
-    padding: 50px;
+@media (max-width:650px) {
+    .card-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
